// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonBetOption /> should render the component correctly background color default 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "black",
      "borderRadius": 10,
      "borderWidth": 1,
      "margin": 5,
      "opacity": 1,
      "padding": 5,
      "width": 100,
    }
  }
  testID="button_To win_betOption"
>
  <Text>
    To win
  </Text>
  <Text>
    12
  </Text>
</View>
`;

exports[`<ButtonBetOption /> should render the component correctly background color green 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "green",
      "borderColor": "black",
      "borderRadius": 10,
      "borderWidth": 1,
      "margin": 5,
      "opacity": 1,
      "padding": 5,
      "width": 100,
    }
  }
  testID="button_To win_betOption"
>
  <Text>
    To win
  </Text>
  <Text>
    12
  </Text>
</View>
`;
